I#428 - Addressbook: Fix possible read of uninitialized data

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/428