src/addressbook/libedata-book/e-book-sqlite.c
@@ -3154,7 +3154,7 @@ convert_phone (const gchar *normal,
 		number = e_phone_number_from_string (normal, region_code, NULL);
 
 	if (number) {
-		EPhoneNumberCountrySource source;
+		EPhoneNumberCountrySource source = E_PHONE_NUMBER_COUNTRY_FROM_DEFAULT;
 
 		national_number = e_phone_number_get_national_number (number);
 		country_code = e_phone_number_get_country_code (number, &source);
@@ -4889,7 +4889,6 @@ query_preflight_check (PreflightContext *context,
 						EBSQL_STATUS_STR (context->status)));
 			} else {
 				QueryPhoneTest *phone_test = (QueryPhoneTest *) test;
-				EPhoneNumberCountrySource source;
 				EPhoneNumber *number;
 				const gchar *region_code;
 
@@ -4913,6 +4912,8 @@ query_preflight_check (PreflightContext *context,
 							phone_test->value,
 							EBSQL_STATUS_STR (context->status)));
 				} else {
+					EPhoneNumberCountrySource source = E_PHONE_NUMBER_COUNTRY_FROM_DEFAULT;
+
 					/* Collect values we'll need later while generating field
 					 * tests, no need to parse the phone number more than once
 					 */
